@@ -78,12 +78,6 @@ public class DDIExportServiceBean {
     private EntityManager em;
 
     /*
-     * Constants used by the worker methods:
-     */
-    private static final String OBJECT_TAG_VARIABLE = "variable";
-    private static final String OBJECT_TAG_DATAFILE = "datafile";
-    private static final String OBJECT_TAG_DATASET = "dataset";
-    /*
      * Database and schema-specific constants:
      * Needless to say, we should *not* be defining these here - it should
      * all live in the database somewhere/somehow.
@@ -108,6 +102,7 @@ public class DDIExportServiceBean {
      */
     private XMLOutputFactory xmlOutputFactory = null;
 
+    // Called by container
     public void ejbCreate() {
         // initialize lists/service classes:
 
@@ -115,38 +110,7 @@ public class DDIExportServiceBean {
     }
 
     @TransactionAttribute(TransactionAttributeType.NOT_SUPPORTED)
-    public void exportDataVariable(Long varId, OutputStream os, String partialExclude, String partialInclude, Long fileMetadataId) {
-
-        export(OBJECT_TAG_VARIABLE, varId, os, partialExclude, partialInclude, fileMetadataId);
-    }
-
-    @TransactionAttribute(TransactionAttributeType.NOT_SUPPORTED)
-    public void exportDataset(Long datasetId, OutputStream os, String partialExclude, String partialInclude) {
-        export(OBJECT_TAG_DATASET, datasetId, os, partialExclude, partialInclude, null);
-
-    }
-
-    @TransactionAttribute(TransactionAttributeType.NOT_SUPPORTED)
-    public void exportDataFile(Long varId, OutputStream os, String partialExclude, String partialInclude, Long fileMetadataId) {
-        export(OBJECT_TAG_DATAFILE, varId, os, partialExclude, partialInclude, fileMetadataId);
-
-    }
-
-    /*
-     * Workhorse methods, that do all the work: 
-     */
-    private void export(String objectTag, Long objectId, OutputStream os, String partialExclude, String partialInclude, Long fileMetadataId) {
-
-        /*
-         * Some checks will need to be here, to see if the corresponding dataset
-         * is released, if all the permissions are satisfied, etc., with 
-         * approrpiate exceptions thrown otherwise. 
-         *
-         *      something like
-        
-         throw new IllegalArgumentException("ExportStudy called with a null study.");
-         throw new IllegalArgumentException("Study does not have released version, study.id = " + s.getId());
-         */
+    public void exportDataFile(DataFile df, OutputStream os, String partialExclude, String partialInclude, FileMetadata fm) {
         Set<String> includedFieldSet = null;
         Set<String> excludedFieldSet = null;
         
@@ -180,42 +144,15 @@ public class DDIExportServiceBean {
         XMLStreamWriter xmlw = null;
 
         // Try to resolve the supplied object id: 
-        Object dataObject = null;
-
-        if (OBJECT_TAG_VARIABLE.equals(objectTag)) {
-            dataObject = variableService.find(objectId);
-            if (dataObject == null) {
-                throw new IllegalArgumentException("Metadata Export: Invalid variable id supplied.");
-            }
-        } else if (OBJECT_TAG_DATAFILE.equals(objectTag)) {
-            dataObject = fileService.find(objectId);
-            if (dataObject == null) {
-                throw new IllegalArgumentException("Metadata Export: Invalid datafile id supplied.");
-            }
-        } else if (OBJECT_TAG_DATASET.equals(objectTag)) {
-            dataObject = datasetService.find(objectId);
-            if (dataObject == null) {
-                throw new IllegalArgumentException("Metadata Export: Invalid dataset id supplied.");
-            }
-            releasedVersion = ((Dataset)dataObject).getReleasedVersion();
-            if (releasedVersion == null) {
-                throw new IllegalArgumentException("Metadata Export: Dataset not released.");
-            }
-        } else {
-            throw new IllegalArgumentException("Metadata Export: Unsupported export requested.");
+        if (df == null) {
+            throw new IllegalArgumentException("Metadata Export: dataObject is null.");
         }
 
         try {
             xmlw = xmlOutputFactory.createXMLStreamWriter(os);
             xmlw.writeStartDocument();
 
-            if (OBJECT_TAG_VARIABLE.equals(objectTag)) {
-                createVarDDI(xmlw, excludedFieldSet, includedFieldSet, (DataVariable) dataObject, fileMetadataId);
-            } else if (OBJECT_TAG_DATAFILE.equals(objectTag)) {
-                createDataFileDDI(xmlw, excludedFieldSet, includedFieldSet, (DataFile) dataObject, fileMetadataId);
-            } else if (OBJECT_TAG_DATASET.equals(objectTag)) {
-                createDatasetDDI(xmlw, excludedFieldSet, includedFieldSet, releasedVersion);
-            }
+            createDataFileDDI(xmlw, excludedFieldSet, includedFieldSet, df, fm);
 
             xmlw.writeEndDocument();
         } catch (XMLStreamException ex) {
@@ -252,16 +189,21 @@ public class DDIExportServiceBean {
         xmlw.writeEndElement(); //varGrp
     }
 
-    private void createVarDDI(XMLStreamWriter xmlw, Set<String> excludedFieldSet, Set<String> includedFieldSet, DataVariable dv, Long fileMetadataId) throws XMLStreamException {
+    private void createVarDDI(XMLStreamWriter xmlw, Set<String> excludedFieldSet, Set<String> includedFieldSet, DataVariable dv, FileMetadata fm) throws XMLStreamException {
         xmlw.writeStartElement("var");
         writeAttribute(xmlw, "ID", "v" + dv.getId().toString());
         writeAttribute(xmlw, "name", dv.getName());
 
-        if (fileMetadataId == null) {
-            fileMetadataId = dv.getDataTable().getDataFile().getFileMetadata().getId();
+        if (fm == null) {
+            fm = dv.getDataTable().getDataFile().getFileMetadata();
+        } else {
+            // Validate that fileMetadata belongs to the DataFile associated with this variable
+            if (!fm.getDataFile().equals(dv.getDataTable().getDataFile())) {
+                throw new IllegalArgumentException("Metadata Export: Invalid fileMetadata supplied for the variable.");
+            }
         }
 
-        List<VariableMetadata> vmList = variableService.findByDataVarIdAndFileMetaId(dv.getId(), fileMetadataId);
+        List<VariableMetadata> vmList = variableService.findByDataVarIdAndFileMetaId(dv.getId(), fm.getId());
         VariableMetadata vm = null;
         if (vmList != null && vmList.size() >0) {
             vm = vmList.get(0);
@@ -433,7 +375,7 @@ public class DDIExportServiceBean {
                     writeAttribute(xmlw, "type", "freq");
                     // if frequency is actually a long value, we want to write "100" instead of "100.0"
                     if (Math.floor(cat.getFrequency()) == cat.getFrequency()) {
-                        xmlw.writeCharacters(new Long(cat.getFrequency().longValue()).toString());
+                        xmlw.writeCharacters(Long.valueOf(cat.getFrequency().longValue()).toString());
                     } else {
                         xmlw.writeCharacters(cat.getFrequency().toString());
                     }
@@ -497,7 +439,7 @@ public class DDIExportServiceBean {
 
     }
 
-    private void createDataFileDDI(XMLStreamWriter xmlw, Set<String> excludedFieldSet, Set<String> includedFieldSet, DataFile df, Long fileMetadataId) throws XMLStreamException {
+    private void createDataFileDDI(XMLStreamWriter xmlw, Set<String> excludedFieldSet, Set<String> includedFieldSet, DataFile df, FileMetadata fm) throws XMLStreamException {
         /* This method will create both the <fileDscr> and <dataDscr><var> 
          * portions of the DDI that describe the tabular data contained in 
          * the file, the file-, datatable- and variable-level metadata; or 
@@ -516,12 +458,13 @@ public class DDIExportServiceBean {
         writeAttribute(xmlw, "version", "2.0");
 
 
-        FileMetadata latestFm = df.getFileMetadata();
-        if (fileMetadataId == null) {
-            fileMetadataId = latestFm.getId();
+        if (fm == null) {
+            fm = df.getFileMetadata();
+        } else {
+            if (!fm.getDataFile().equals(df)) {
+                throw new IllegalArgumentException("Metadata Export: Invalid fileMetadata supplied for the datafile.");
+            }
         }
-
-        FileMetadata fm = fileService.findFileMetadata(fileMetadataId);
 
         createStdyDscr(xmlw, excludedFieldSet, includedFieldSet, fm.getDatasetVersion());
         
@@ -536,7 +479,7 @@ public class DDIExportServiceBean {
 
         if (checkField("varGrp", excludedFieldSet, includedFieldSet)) {
 
-            List<VarGroup> varGroups = variableService.findAllGroupsByFileMetadata(fileMetadataId);
+            List<VarGroup> varGroups = variableService.findAllGroupsByFileMetadata(fm.getId());
 
             for (VarGroup varGrp : varGroups) {
                 createVarGroupDDI(xmlw, excludedFieldSet, null, varGrp);
@@ -562,7 +505,7 @@ public class DDIExportServiceBean {
             }
 
             for (DataVariable var : vars) {
-                createVarDDI(xmlw, excludedFieldSet, null, var, fileMetadataId);
+                createVarDDI(xmlw, excludedFieldSet, null, var, fm);
             }
         }
 
@@ -654,7 +597,7 @@ public class DDIExportServiceBean {
                 }
 
                 for (DataVariable var : vars) { 
-                    createVarDDI(xmlw, excludedFieldSet, null, var, fileMetadata.getId());
+                    createVarDDI(xmlw, excludedFieldSet, null, var, fileMetadata);
                 }
             }
             
